# LLVM_Kaleidoscope

./: .gitignore  Makefile  README.md  cllvm.h  error.cc  error.h  gdb-script  lexer.cc  lexer.h  main.cc  parser.cc  parser.h
src/: CMakeLists.txt  cllvm.h  error.cc  main.cc  parser.cc  parser.h
test/: CMakeCache.txt  Makefile  cmake_install.cmake  tests.cpp
